# latex-symbols.kak

./: Cargo.toml
src/: generate_symbols.rs  main.rs
