[package]
name	=	"latex_symbols"
version	=	"0.1.0"
edition	=	"2021"
authors	=	["Soc Virnyl S. Estela <socvirnyl.estela@gmail.com>"]
license =	"unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
